# music_visualizer

./: CMakeLists.txt  README.md
include/: ffmpeg.h  plug.h
shaders/: circle.fs  smear.fs
src/: ffmpeg.c  fft_tryout.c  main.c  music_wave_plotter.c  plug.c
test_scripts/: simple_example_ffmpeg.c
